YH July2020 Final Changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -137,6 +137,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/editprofiledetails">Edit Profile</a>
           <a class="dropdown-item" href="/changepassword">Change Password</a>
+          <a class="dropdown-item" href="/boilerform_yh/">Create Quote</a>
           {% if request.user.username == 'yourheatx' %}
             <a class="dropdown-item" href="/showuploadedfiles">Show Images</a>
             <!-- <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
