--- a/templates/pdf/user_yourheatx/customer_comms/Customer Quote Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Customer Quote Comms.html
@@ -103,7 +103,7 @@
 
 <body>
     <div class="email_header">
-        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_about_your_boiler_quotation.png' alt="Your Heat Header"/>
+        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_boiler_replacement_quotation.png' alt="Your Heat Header"/>
     </div>
 
     <div class="body_text">
@@ -123,22 +123,26 @@
             <!-- Insert Email body content here  -->
 
             <p class="all_text">
-                We've been trying to contact you to discuss the quotation we gave you recently. We'd love to know if there was anything further
-                we could do to support the quotation we provided however we appreciate you may not be ready to make a decision 
-                about the installation, so we'll wait for you to contact us if you do want to talk.
+                Thank you for your time today, attached is a copy of your Fixed Price Quotation - I hope Surveyor {{surveyor_first_name}} {{surveyor_last_name}} looked after you well and answered all your questions.
             </p>
-            
+
             <p class="all_text">
-                If you'd like to arrange a convenient time for us to give you a call in the future,
-                simply reply to this email and one of our team will be happy to schedule a call.
+                It is quite common to have a few more questions following receipt of the quotation so please feel free
+                to contact {{surveyor_first_name}} on <a href="tel:{{surveyor_phone_number}}"><b>{{surveyor_phone_number}}</b></a>, who will be able answer these for you.
+                Alternatively, you are welcome to contact the office directly on <a
+                href="tel:01732622990"><b>01732 622990</b></a> or email <a href='mailto:info@yourheat.co.uk'><b>info@yourheat.co.uk</b></a> for any additional support.
             </p>
-            
+
             <p class="all_text">
-                Alternatively, please feel free to ask any questions by email, and we'll reply with the information you need.
+                The team here will be in touch with you again very shortly to ensure that you have everything you need.
             </p>
-            
+
             <p class="all_text">
-                Warm Regards, The Your Heat Team
+                For more information about us, please visit <a href='https://yourheat.co.uk/'><b>www.yourheat.co.uk</b></a>    
+            </p>
+
+            <p class="all_text">
+                Warm regards, The Your Heat Team
             </p>
 
             <!-- End of Email body content  -->
