--- a/templates/pdf/user_yourheatx/customer_comms/Survey Booked Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Survey Booked Comms.html
@@ -1,119 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <title>Customer Comms</title>
     <style>
-    @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
-    * {font-family: 'Poppins', sans-serif;}
-    body { text-align: center;}
-    .all_text {font-family: 'Poppins', sans-serif; font-size:16px; text-align: justify}
-    .contact_text {font-family: 'Poppins', sans-serif; font-size:20px; text-align: center}
-    .contact_text a {font-family: 'Poppins', sans-serif; font-size:20px; text-align: center}
-    .body_text {position: relative; width:99%; margin:0 auto;}
-    #final-strap-line {text-align: center; color: rgb(251,126,51);}
-    #final-strap-text {font-family:verdana; font-style: italic; font-size: 16px; font-weight: 900;}
-    #img2 { position:relative; top: 20px;}
+        @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
-    .background_img {
-        width: 99%;
-        background-image: radial-gradient( circle, rgba(216,177,56,0.25) 30%, rgba(179,94,63,1)), url("http://www.qpcentral.co.uk/static/images/yh_email_background.jpg");
-        background-position: center;
-        background-size: contain;
-        margin: 0 auto;
-        padding-bottom: 1px;
-    }
-    .text_header {font-family: 'Poppins', sans-serif; font-size:20px; color: white; text-align: center; }
-    i {
-        color:black;
-    }
-    .background_footer {
-        width:100%;
-        height:80px;
-        background-position: center;
-        background-color: black;
-        margin: 25px auto 0px auto
-    }
-    .footer_text {
-        color:white;
-        font-size: 12px;
-        text-align: right;
-    }
-    .left {
-        float: left;
-        margin: 1.5rem 2rem 2rem 2rem;
+        * {
+            font-family: 'Poppins', sans-serif;
+        }
 
-    }
-    .right {
-        margin: .4rem 2rem 2rem 2rem;
-        float: right;
-    }
-    a {
-        text-decoration: none ;
-        color: inherit;
-    }
+        body {
+            text-align: center;
+        }
+
+        .all_text {
+            font-family: 'Poppins', sans-serif;
+            font-size: 16px;
+            text-align:justify;
+        }
+
+        .contact_text {
+            font-family: 'Poppins', sans-serif;
+            font-size: 14px;
+            text-align: center;
+        }
+
+        .contact_text a {
+            font-family: 'Poppins', sans-serif;
+            font-size: 14px;
+            text-align: center;
+        }
+
+        .body_text {
+            position: relative;
+            width: 99%;
+            margin: 0 auto;
+        }
+
+        #final-strap-line {
+            text-align: center;
+            color: rgb(251, 126, 51);
+        }
+
+        #final-strap-text {
+            font-family: verdana;
+            font-style: italic;
+            font-size: 16px;
+            font-weight: 900;
+        }
+
+        #img2 {
+            position: relative;
+            top: 20px;
+        }
+
+        .text_header {
+            font-family: 'Poppins', sans-serif;
+            font-size: 22px;
+            color: white;
+            bottom:90px;
+            position:relative;
+        }
+
+
+        .background_footer {
+            width: 99%;
+            height: 80px;
+            background-position: center;
+            background-color: black;
+            margin: 25px auto 0px auto;
+        }
+
+        .footer_text {
+            color: white;
+            font-size: 12px;
+            text-align: right;
+        }
+
+        .left {
+            float: left;
+            margin: 1.5rem 2rem 2rem 2rem;
+
+        }
+
+        .right {
+            margin: .4rem 2rem 2rem 2rem;
+            float: right;
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+        .email_header img {
+            width:99%;
+        }
     </style>
-
-<title>Customer Comms</title>
 </head>
+
 <body>
-    <div class="background_img">
-        <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="400" id="img2" />
-        
-        <p class="text_header">ABOUT YOUR BOILER QUOTATION</p>    
+    <div class="email_header">
+        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_about_your_boiler_quotation.png' alt="Your Heat Header"/>
     </div>
 
-<div class="body_text">    
+    <div class="body_text">
 
-    <div class="content">
-    <div class = "contact_text">
-        <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a href="tel:01732 622990">01732 622990</a> | <img src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a> 
+        <div class="content">
+            <div class="contact_text">
+                <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
+                    href="tel:01732622990">01732 622990</a> | <img
+                    src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
+                    href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img
+                    src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
+                    href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a>
+            </div>
+
+            <p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
+
+            <!-- Insert Email body content here  -->
+
+            <p class="all_text">
+                Our surveyor is looking forward to visiting you to provide a free, no-obligation quote to replace your
+                boiler.
+                {{ surveyor_name }} is booked to arrive at your property on <b>{{survey_date|date:"D j F Y"}}</b>
+                {% if survey_time == 'Anytime' %}
+                .
+                {% elif survey_time == 'Anytime AM' %}
+                before <b>12 noon.</b>
+                {% elif survey_time == 'Anytime PM' %}
+                after <b>12 noon.</b>
+                {% else %}
+                between <b>{{survey_time}}</b>.
+                {% endif %}
+            </p>
+
+            <p class="all_text">
+                If you do have any questions prior to our visit, please don't hesitate to reply to this email,
+                or call on <a href="tel:01732622990"><b>01732 622990</b></a>.
+            </p>
+
+            <p class="all_text">
+                Warm regards, The Your Heat Team
+            </p>
+
+            <!-- End of Email body content  -->
+
+            <div id="final-strap-line">
+                <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a
+                    sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
+            </div>
+
+        </div>
+
     </div>
 
-<p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
+    <div class="background_footer">
 
-<p class="all_text">
-    Our surveyor is looking forward to visiting you to provide a free, no-obligation quote to replace your boiler.
-    {{ surveyor_name }} is booked to arrive at your property on {{survey_date|date:"D j F Y"}}
-    {% if survey_time == 'Anytime' %}
-        .
-    {% elif survey_time == 'Anytime AM' %}
-        before 12 noon.
-    {% elif survey_time == 'Anytime PM' %}
-        after 12 noon.
-    {% else %}
-        between {{survey_time}}.
-    {% endif %}    
-</p>
+        <div class="left">
+            <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="150">
+        </div>
 
-<p class="all_text">
-    If you do have any questions prior to our visit, please don't hesitate to reply to this email, 
-    or call on <a href="tel:01732 622990">01732 622990</a>.
-</p>
-
-<p class="all_text">
-    Warm regards, The Your Heat Team
-</p>
-
-<div id="final-strap-line">
-    <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
-</div>
-
-</div>
-
-</div>
-
-<div class="background_footer">
-
-    <div class="left">
-        <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width=150px>
+        <div class="right">
+            <p class="footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
+            <p class="footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and
+                    Conditions</a></p>
+        </div>
     </div>
-
-    <div class="right">
-        <p class = "footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
-        <p class = "footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and Conditions</a></p>
-    </div>
-</div>
 
 </body>
+
 </html>
