--- a/templates/pdf/user_yourheatx/customer_comms/Installation Notification Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Installation Notification Comms.html
@@ -1,57 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-    body {background-color:rgb(240, 240, 240);}
-    .box {position:relative; width:80%; height:80%; background-color:white; margin:0 auto; border:1px solid rgb(225, 225, 225); top:20px}
-    .boxx2 {position:relative; width:80%; height:28%; background-color:rgb(240, 240, 240); border:1px solid rgb(225, 225, 225); margin:0 auto; top:40px; padding:5px;}
-    .box2 {position:relative; width:80%; height:28%; background-color:white; border:3px solid orange; border-top-left-radius: 20px; border-bottom-right-radius: 20px; margin:0 auto; top:40px; padding:5px;}
-    .all_text {font-family:verdana; font-size:14px; text-align: justify}
-    .body_text {position: relative; width:80%; margin:0 auto;}
-    #final-strap-line {text-align: center; color: rgb(251,126,51);}
-    #final-strap-text {font-family:verdana; font-style: italic; font-size: 18px; font-weight: 900;}
-    </style>
-
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Customer Comms</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+
+        * {
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
+            text-align: center;
+        }
+
+        .all_text {
+            font-family: 'Poppins', sans-serif;
+            font-size: 16px;
+            text-align:justify;
+        }
+
+        .contact_text {
+            font-family: 'Poppins', sans-serif;
+            font-size: 14px;
+            text-align: center;
+        }
+
+        .contact_text a {
+            font-family: 'Poppins', sans-serif;
+            font-size: 14px;
+            text-align: center;
+        }
+
+        .body_text {
+            position: relative;
+            width: 99%;
+            margin: 0 auto;
+        }
+
+        #final-strap-line {
+            text-align: center;
+            color: rgb(251, 126, 51);
+        }
+
+        #final-strap-text {
+            font-family: verdana;
+            font-style: italic;
+            font-size: 16px;
+            font-weight: 900;
+        }
+
+        #img2 {
+            position: relative;
+            top: 20px;
+        }
+
+        .text_header {
+            font-family: 'Poppins', sans-serif;
+            font-size: 22px;
+            color: white;
+            bottom:90px;
+            position:relative;
+        }
+
+
+        .background_footer {
+            width: 99%;
+            height: 80px;
+            background-position: center;
+            background-color: black;
+            margin: 25px auto 0px auto;
+        }
+
+        .footer_text {
+            color: white;
+            font-size: 12px;
+            text-align: right;
+        }
+
+        .left {
+            float: left;
+            margin: 1.5rem 2rem 2rem 2rem;
+
+        }
+
+        .right {
+            margin: .4rem 2rem 2rem 2rem;
+            float: right;
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+        .email_header img {
+            width:99%;
+        }
+    </style>
 </head>
+
 <body>
-<div class='box'>
-    <div class='box2'>
-        <p style='text-align:center'><img src='http://www.qpcentral.co.uk/static/images/YourHeatLogo-Transparent.png'></p>
-        <p style='text-align:center; font-family:verdana; font-size:18px'><b>About your installation...</b></p>
+    <div class="email_header">
+        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_about_your_installation.png' alt="Your Heat Header"/>
     </div>
-<br><br>
-<div class="body_text">    
-<p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
 
-<p class="all_text">
-    Thank you for choosing Your Heat as your trusted boiler installation specialist. 
-    Please accept this email as confirmation of your installation booking for {{installation_date|date:"D j F Y"}} with our engineer {{engineer_name}}. 
-    He will arrive with you between 8am and 10am on this day and will be installing a {{brand}} boiler.
-</p>
+    <div class="body_text">
 
-<p class="all_text">
-    Once your installation is complete, {{ engineer_first_name }} will ensure that your property is left tidy,
-    and will run through any questions that you may have surrounding the operation of your new boiler.
-    He will bring your guarantee details back to our head office, and we will register the guarantee on your behalf.
-    If you have any further questions, please don't hesitate to contact us on 01732 622 990, or reply to this email.
-</p>
+        <div class="content">
+            <div class="contact_text">
+                <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
+                    href="tel:01732622990">01732 622990</a> | <img
+                    src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
+                    href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img
+                    src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
+                    href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a>
+            </div>
 
-<p class="all_text">
-    Warm Regards, The Your Heat Team
-</p>
+            <p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
 
-<div id="final-strap-line">
-    <p id="final-strap-text">Your Heat - Our Priority, Always.</p>
-</div>
+            <!-- Insert Email body content here  -->
 
-<p class="all_text">
-    Telephone: 01732 622 990 Email: <a href='mailto:service@yourheat.co.uk'>service@yourheat.co.uk</a> Website: <a href='https://yourheat.co.uk/'>https://yourheat.co.uk/</a>
-</p>
-</div>
+            <p class="all_text">
+                Thank you for choosing Your Heat as your trusted boiler installation specialist. 
+                Please accept this email as confirmation of your installation booking for {{installation_date|date:"D j F Y"}} with our engineer {{engineer_name}}. 
+                He will arrive with you between 8am and 10am on this day and will be installing a {{brand}} boiler.
+            </p>
+            
+            <p class="all_text">
+                Once your installation is complete, {{ engineer_first_name }} will ensure that your property is left tidy,
+                and will run through any questions that you may have surrounding the operation of your new boiler.
+                He will bring your guarantee details back to our head office, and we will register the guarantee on your behalf.
+                If you have any further questions, please don't hesitate to contact us on <a href="tel:01732622990"><b>01732 622990</b></a>, or reply to this email.
+            </p>
+            
+            <p class="all_text">
+                Warm Regards, The Your Heat Team
+            </p>
 
-</div>
+            <!-- End of Email body content  -->
+
+            <div id="final-strap-line">
+                <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a
+                    sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="background_footer">
+
+        <div class="left">
+            <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="150">
+        </div>
+
+        <div class="right">
+            <p class="footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
+            <p class="footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and
+                    Conditions</a></p>
+        </div>
+    </div>
+
 </body>
+
 </html>
