--- a/templates/base.html
+++ b/templates/base.html
@@ -140,8 +140,8 @@
           <a class="dropdown-item" href="/boilerform_yh/">Create Quote</a>
           {% if request.user.username == 'yourheatx' %}
             <a class="dropdown-item" href="/showuploadedfiles">Show Images</a>
-            <!-- <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
-            <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a> -->
+            <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
+            <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a>
             {% endif %}
             <!-- <a class="dropdown-item" href="/ssPostSurveyQuestions">Post Survey Update</a>
             <a class="dropdown-item" href="/ssGetPhotosForUpload">Upload Photos</a> -->
