YH Updates for Quote Regeneration

--- a/templates/base.html
+++ b/templates/base.html
@@ -137,11 +137,14 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/editprofiledetails">Edit Profile</a>
           <a class="dropdown-item" href="/changepassword">Change Password</a>
-          <a class="dropdown-item" href="/boilerform_yh/">Create Quote</a>
+          <!-- <a class="dropdown-item" href="/boilerform_yh/">Create Quote</a> -->
           {% if request.user.username == 'yourheatx' %}
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/showuploadedfiles">Show Images</a>
-            <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
-            <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a>
+            <a class="dropdown-item" href="/uploadforreprint_yh">Upload Requote File</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/HubHome">Sales Hub View</a>
+            <a class="dropdown-item" href="/home">Data Admin View</a>
             {% endif %}
             <!-- <a class="dropdown-item" href="/ssPostSurveyQuestions">Post Survey Update</a>
             <a class="dropdown-item" href="/ssGetPhotosForUpload">Upload Photos</a> -->
