--- a/templates/yourheat/adminpages/customer_comms_landing_page.html
+++ b/templates/yourheat/adminpages/customer_comms_landing_page.html
@@ -77,11 +77,11 @@
     </div>
     <div class="row comms-row">
         <div class = "col-4">
-            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'New Survey Booked Comms' customer_id  %}">For Testing Only (SurveyBooked)</a>
+            <a class="btn boilerbtn btn-warning" href="{% url 'PreviewComms' 'Invoice Comms' customer_id  %}">Invoice Comms</a>
         </div>
         <div class = "col-8">    
-            <i>Dear ____, Our surveyor is looking forward to visiting you to provide a free, no-obligation quote...</i><br>
-            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [ Surveyor Name ] [ Survey Date ] [ Survey Time ]</p>
+            <i>Dear ____, Thank you for choosing Your Heat. Please find attached a copy of your Deposit Invoice which is payable by return...</i><br>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name]</p>
         </div>
     </div>         
       
