--- a/templates/yourheat/orderforms/workloadandextrasform.html
+++ b/templates/yourheat/orderforms/workloadandextrasform.html
@@ -41,6 +41,11 @@
                 <label>{{ wizard.form.surveyors_notes.label }} *</label>
                 {{ wizard.form.surveyors_notes }}
             </div>
+            
+            <div class="form-group">
+                <label>{{ wizard.form.disruption_and_pipework_routes.label }} *</label>
+                {{ wizard.form.disruption_and_pipework_routes }}
+            </div>
         </div>
 
     </div>
